--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <!-- Google tag (gtag.js) -->
+  <head><!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9QY396P88V"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
